[project]
name = "expense-tracker"
version = "1.0.0"
description = "Speech Recognition Automated Expense Tracker"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]
